...
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:max="15"
        android:progress="10"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:visibility="gone"
        tools:ignore="UnknownIdInLayout" />

    <FrameLayout
...
